Remove Extra Files and layout page modificatoin

--- a/Areas/User/Views/Deshboard/Index.cshtml
+++ b/Areas/User/Views/Deshboard/Index.cshtml
@@ -67,7 +67,7 @@
                 </div>
 
                 <div class="col-xl-3 col-md-6 mb-4">
-                    <a asp-area="Customer" asp-controller="Order" asp-action="UserOrders" class="card-link">
+                    <a asp-area="User" asp-controller="Deshboard" asp-action="Index" class="card-link">
                         <div class="card border-left-success shadow h-100 py-2" style="border-left-color: #28a745;">
                             <div class="card-body">
                                 <div class="row no-gutters align-items-center">
