--- a/Areas/Rider/Views/RiderDelivery/RunningDeliveries.cshtml
+++ b/Areas/Rider/Views/RiderDelivery/RunningDeliveries.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<OrganicOption.Models.Rider_Section.Delivery>
 
-<div class="container">
-
+<div class="container mt-2">
+    <a href="javascript:history.back()" class="btn btn-secondary mb-2"><i class="fa fa-arrow-left"></i> Back</a>
 
 
 <h4>Currently Running Deliveries</h4>
