--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -770,7 +770,7 @@
                 },
                 error: function (xhr, status, error) {
                     console.error('Error fetching notifications:', error);
-                    $('#notificationsContainer').html('<li class="dropdown-item">Error loading notifications</li>');
+                    $('#notificationsContainer').html('<li class="dropdown-item">Login to see notification</li>');
                 }
             });
         }
