update inventory UI

--- a/Areas/Farmer/Views/Inventory/Index.cshtml
+++ b/Areas/Farmer/Views/Inventory/Index.cshtml
@@ -16,7 +16,7 @@
         </div>
         <div class="col-md-4 text-right">
             <a asp-action="ShowAllProductsByTime" asp-area="Farmer" asp-controller="Inventory" class="btn btn-info mb-2">All Products</a>
-            <a asp-action="ShowSoldProducts" asp-area="Farmer" asp-controller="Inventory" class="btn btn-info mb-2">Daily Sold Products</a>
+            <a asp-action="ShowSoldProducts" asp-area="Farmer" asp-controller="Inventory" class="btn btn-info mb-2"> Sold Products</a>
         </div>
     </div>
 
