update UserPayment page UI

--- a/Areas/Customer/Views/Order/PaymentPage.cshtml
+++ b/Areas/Customer/Views/Order/PaymentPage.cshtml
@@ -95,7 +95,7 @@
                                 <button id="paymentButton" type="submit" class="btn btn-success wide-button">Payment with Stripe</button>
                             </div>
                             <div >
-                                <a asp-area="Customer" id="confirmButton" onclick="confirmCashOnDelivery()" asp-controller="Order" asp-action="UserOrders" class="btn btn-success wide-button">Confirm Order</a>
+                                <a asp-area="User" id="confirmButton" onclick="confirmCashOnDelivery()" asp-controller="Deshboard" asp-action="Index" class="btn btn-success wide-button">Confirm Order</a>
                             </div>
                         </div>
                     </form>
