--- a/Areas/Admin/Views/Wallet/AllWithdrawals.cshtml
+++ b/Areas/Admin/Views/Wallet/AllWithdrawals.cshtml
@@ -11,6 +11,7 @@
     <div class="d-flex justify-content-end mb-3">
         <a href="@Url.Action("AdminViewWithdrawals", "Wallet")" class="btn btn-primary">Manage Withdraw</a>
         <a style="margin-left:7px" asp-area="Customer" asp-controller="Order" asp-action="CardOrders" class="btn btn-info">Manage Card Orders</a>
+        <a style="margin-left:7px" asp-area="Customer" asp-controller="Order" asp-action="CashOrders" class="btn btn-info">Cash On Delivary</a>
     </div>
 
 
