--- a/Areas/User/Views/Deshboard/Index.cshtml
+++ b/Areas/User/Views/Deshboard/Index.cshtml
@@ -459,12 +459,6 @@
                     <i class="fas fa-users"></i> All User
                 </a>
 
-
-                @*
-            <a asp-area="Admin" asp-controller="Wallet" asp-action="AllWithdrawals" class="btn custom-btn btn-light">
-            <i class="fas fa-wallet"></i> Wallet
-            </a> *@
-
                 <a asp-area="Customer" asp-controller="Blog" asp-action="BlogManager" class="btn custom-btn btn-dark">
                     <i class="fas fa-blog"></i> Blog Manage
                 </a>
@@ -480,6 +474,15 @@
                 <a asp-action="SetDiscount" asp-area="Admin" asp-controller="Products" class="btn custom-btn btn-danger" style="background:#936435">
                     <i class="fas fa-percentage"></i> Set Discount
                 </a>
+
+                <a asp-action="Riders" asp-area="User" asp-controller="Deshboard" class="btn custom-btn btn-danger" style="background:#4bd5c2">
+                    <i class="fas fa-uber"></i> All Riders
+                </a>
+
+                <a asp-action="Farmers" asp-area="User" asp-controller="Deshboard" class="btn custom-btn btn-danger" style="background:#4bd5c2">
+                    <i class="fas fa-user-circle"></i> All Farmers
+                </a>
+
             </div>
         }
         @if (User.IsInRole("Admin"))
