--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -269,15 +269,15 @@
                                             }
                                         </a>
                                         <div class="dropdown-menu shadow animated--grow-in mt-1" aria-labelledby="alertsDropdown"
-                                             style="width: 400px; max-height: 600px; overflow-y: auto; padding: 0; border-radius: 0.5rem; left: -100px;  ">
+                                             style="width: 450px; max-height: 500px; overflow-y: auto; padding: 0; border-radius: 0.4rem; left: -120px;  ">
                                             <h6 class="dropdown-header"
                                                 style="font-size: 1.0rem; font-size:18px; font-weight: bold; color: #343a40; background-color: #f8f9fa; padding: 0.5rem 1rem; border-bottom: 1px solid #dee2e6;">
                                                 Notification Center
                                             </h6>
-                                            <div id="notificationsContainer" style="padding: 10px;">
+                                            <div id="notificationsContainer" style="padding:5px; background:white">
                                             </div>
                                             <a class="dropdown-item text-center small"
-                                               href="@Url.Action("Latest", "Notifications", new { area = "Customer" })"
+                                               href="@Url.Action("Index", "Notifications", new { area = "Customer" })"
                                                style="color: #dc3545; padding: 0.75rem 1.25rem; text-align: center; transition: background-color 0.3s ease; display: block;">
                                                 Show All Alerts
                                             </a>
