--- a/Areas/User/Views/Deshboard/Index.cshtml
+++ b/Areas/User/Views/Deshboard/Index.cshtml
@@ -475,12 +475,12 @@
                     <i class="fas fa-percentage"></i> Set Discount
                 </a>
 
-                <a asp-action="Riders" asp-area="User" asp-controller="Deshboard" class="btn custom-btn btn-danger" style="background:#4bd5c2">
-                    <i class="fas fa-uber"></i> All Riders
+                <a asp-action="Riders" asp-area="User" asp-controller="Deshboard" class="btn custom-btn btn-danger" style="background:#2a8b6e">
+                    <i class="fa-solid fa-motorcycle"></i> All Riders
                 </a>
 
-                <a asp-action="Farmers" asp-area="User" asp-controller="Deshboard" class="btn custom-btn btn-danger" style="background:#4bd5c2">
-                    <i class="fas fa-user-circle"></i> All Farmers
+                <a asp-action="Farmers" asp-area="User" asp-controller="Deshboard" class="btn custom-btn btn-danger" style="background:#5b8285">
+                    <i class="fa-solid fa-hat-cowboy"></i> All Farmers
                 </a>
 
             </div>
