--- a/Areas/Farmer/Views/FarmerShop/Shop.cshtml
+++ b/Areas/Farmer/Views/FarmerShop/Shop.cshtml
@@ -177,7 +177,7 @@
                                                 <div class="action_links">
                                                     <ul>
                                                         
-                                                        <li class="add_to_cart"><a asp-action="Detail" asp-controller="Home" asp-route-id="@product.Id" title="add to cart"><i class="zmdi zmdi-shopping-cart-plus"></i> add to cart</a></li>
+                                                        <li class="add_to_cart"><a asp-action="Detail" asp-area="Customer" asp-controller="Home" asp-route-id="@product.Id" title="add to cart"><i class="zmdi zmdi-shopping-cart-plus"></i> add to cart</a></li>
 
                                                     </ul>
                                                 </div>
@@ -214,7 +214,7 @@
                                                 <div class="action_links">
                                                     <ul>
 
-                                                        <li class="add_to_cart"><a asp-action="Detail" asp-controller="Home" asp-route-id="@product.Id" title="add to cart"><i class="zmdi zmdi-shopping-cart-plus"></i> add to cart</a></li>
+                                                        <li class="add_to_cart"><a asp-action="Detail" asp-controller="Home" asp-area="Customer" asp-route-id="@product.Id" title="add to cart"><i class="zmdi zmdi-shopping-cart-plus"></i> add to cart</a></li>
 
                                                     </ul>
                                                 </div>
@@ -251,7 +251,7 @@
                                                 <div class="action_links">
                                                     <ul>
 
-                                                        <li class="add_to_cart"><a asp-action="Detail" asp-controller="Home" asp-route-id="@product.Id" title="add to cart"><i class="zmdi zmdi-shopping-cart-plus"></i> add to cart</a></li>
+                                                        <li class="add_to_cart"><a asp-action="Detail" asp-area="Customer" asp-controller="Home" asp-route-id="@product.Id" title="add to cart"><i class="zmdi zmdi-shopping-cart-plus"></i> add to cart</a></li>
 
                                                     </ul>
                                                 </div>
@@ -288,7 +288,7 @@
                                                 <div class="action_links">
                                                     <ul>
 
-                                                        <li class="add_to_cart"><a asp-action="Detail" asp-controller="Home" asp-route-id="@product.Id" title="add to cart"><i class="zmdi zmdi-shopping-cart-plus"></i> add to cart</a></li>
+                                                        <li class="add_to_cart"><a asp-action="Detail" asp-controller="Home" asp-area="Customer" asp-route-id="@product.Id" title="add to cart"><i class="zmdi zmdi-shopping-cart-plus"></i> add to cart</a></li>
 
                                                     </ul>
                                                 </div>
@@ -325,7 +325,7 @@
                                                 <div class="action_links">
                                                     <ul>
 
-                                                        <li class="add_to_cart"><a asp-action="Detail" asp-controller="Home" asp-route-id="@product.Id" title="add to cart"><i class="zmdi zmdi-shopping-cart-plus"></i> add to cart</a></li>
+                                                        <li class="add_to_cart"><a asp-action="Detail" asp-controller="Home" asp-area="Customer" asp-route-id="@product.Id" title="add to cart"><i class="zmdi zmdi-shopping-cart-plus"></i> add to cart</a></li>
 
                                                     </ul>
                                                 </div>
@@ -340,7 +340,7 @@
                                     {
                                         <div class="single_deals_product">
                                             <div class="product_thumb">
-                                                <a asp-action="Detail" asp-controller="Home" asp-area="Customer" asp-route-id="@product.Id"><img src="~/@product.Image" style="height: 320px; width: 60%; border-top:5px;" alt="Card Image"></a>
+                                                <a asp-action="Detail" asp-controller="Home" asp-area="Customer"  asp-route-id="@product.Id"><img src="~/@product.Image" style="height: 320px; width: 60%; border-top:5px;" alt="Card Image"></a>
                                                 <div class="label_product">
                                                     <span class="label_sale">sale</span>
                                                 </div>
@@ -362,7 +362,7 @@
                                                 <div class="action_links">
                                                     <ul>
 
-                                                        <li class="add_to_cart"><a asp-action="Detail" asp-controller="Home" asp-route-id="@product.Id" title="add to cart"><i class="zmdi zmdi-shopping-cart-plus"></i> add to cart</a></li>
+                                                        <li class="add_to_cart"><a asp-action="Detail" asp-controller="Home" asp-area="Customer" asp-route-id="@product.Id" title="add to cart"><i class="zmdi zmdi-shopping-cart-plus"></i> add to cart</a></li>
 
                                                     </ul>
                                                 </div>
@@ -399,7 +399,7 @@
                                                 <div class="action_links">
                                                     <ul>
 
-                                                        <li class="add_to_cart"><a asp-action="Detail" asp-controller="Home" asp-route-id="@product.Id" title="add to cart"><i class="zmdi zmdi-shopping-cart-plus"></i> add to cart</a></li>
+                                                        <li class="add_to_cart"><a asp-action="Detail" asp-controller="Home" asp-area="Customer" asp-route-id="@product.Id" title="add to cart"><i class="zmdi zmdi-shopping-cart-plus"></i> add to cart</a></li>
 
                                                     </ul>
                                                 </div>
@@ -436,7 +436,7 @@
                                                 <div class="action_links">
                                                     <ul>
 
-                                                        <li class="add_to_cart"><a asp-action="Detail" asp-controller="Home" asp-route-id="@product.Id" title="add to cart"><i class="zmdi zmdi-shopping-cart-plus"></i> add to cart</a></li>
+                                                        <li class="add_to_cart"><a asp-action="Detail" asp-controller="Home" asp-area="Customer" asp-route-id="@product.Id" title="add to cart"><i class="zmdi zmdi-shopping-cart-plus"></i> add to cart</a></li>
 
                                                     </ul>
                                                 </div>
